snippets/Nemerle.Statechart/Tests/testsuite/positive/timed_after_event.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;
  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
  flags testing;

  //flags debug;

  name "timed event";
  
  state A
  {
    a => B;
  }
  
  state B
  {
    after (300 ms) => C;
  }
   
  state C
  {
    a => A;
  }
  #>)]
  public class example
  {
  }



module Test
{
  Main() : void
  {
    def fsm = example();
    def tester = fsm.GetTester();
    tester.ConsoleTestInit();
    tester.Initiate("A", "EntryA");
    tester.TestWait("a", 500, "C", "ExitA", "EntryB", "ExitB", "EntryC");
    tester.Test("a", "A", "ExitC", "EntryA");
    fsm.Terminate();
  }
}

/*
BEGIN-OUTPUT
EntryA
[A]
Ok
Processing a 'a' 
ExitA
EntryB
ExitB
EntryC
[C]
Ok
Processing a 'a' 
ExitC
EntryA
[A]
Ok
END-OUTPUT
*/
